--- a/ct_references.bib
+++ b/ct_references.bib
@@ -161,7 +161,7 @@
 	author = {Atran, Scott},
 	year = {2001},
 	note = {Publisher: Walter de Gruyter and Co.},
-	keywords = {Cognition, Culture, Imitation, Inference, Meme, Modularity},
+	keywords = {Culture, Cognition, Imitation, Inference, Meme, Modularity},
 	pages = {351--381},
 	file = {PDF:/home/akc47/Zotero/storage/8Q5XYD3B/full-text.pdf:application/pdf},
 }
@@ -252,7 +252,7 @@
 	year = {2015},
 	pmid = {25816230},
 	note = {Publisher: Public Library of Science},
-	keywords = {Adults, Animal sociality, Central African Republic, Children, Cross-cultural studies, Culture, Human learning, Toddlers},
+	keywords = {Culture, Adults, Animal sociality, Central African Republic, Children, Cross-cultural studies, Human learning, Toddlers},
 	pages = {e0120180},
 	file = {PDF:/home/akc47/Zotero/storage/ICZWA885/full-text.pdf:application/pdf},
 }
@@ -270,7 +270,7 @@
 	month = may,
 	year = {2008},
 	note = {Publisher: Elsevier},
-	keywords = {Cultural evolution, Cultural transmission, Culture, Ratchet effect, Social learning},
+	keywords = {Culture, Cultural transmission, Cultural evolution, Ratchet effect, Social learning},
 	pages = {165--171},
 	file = {PDF:/home/akc47/Zotero/storage/G3677QR2/full-text.pdf:application/pdf},
 }
@@ -289,7 +289,7 @@
 	year = {2009},
 	pmid = {19891752},
 	note = {Publisher: Psychol Sci},
-	keywords = {Adolescent, Adult, Aged, Ailsa E Millen, Christine A Caldwell, Cultural Evolution*, Culture, doi:10.1111/j.1467-9280.2009.02469.x, Female, Humans, Imitative Behavior*, Learning, Male, MEDLINE, Middle Aged, National Center for Biotechnology Information, National Institutes of Health, National Library of Medicine, NCBI, NIH, NLM, Non-U.S. Gov't, pmid:19891752, PubMed Abstract, Research Support, Social Behavior*, Young Adult},
+	keywords = {Culture, Female, Humans, Male, MEDLINE, National Center for Biotechnology Information, National Institutes of Health, National Library of Medicine, NCBI, NIH, NLM, Non-U.S. Gov't, PubMed Abstract, Research Support, Adolescent, Adult, Aged, Ailsa E Millen, Christine A Caldwell, Cultural Evolution*, doi:10.1111/j.1467-9280.2009.02469.x, Imitative Behavior*, Learning, Middle Aged, pmid:19891752, Social Behavior*, Young Adult},
 	pages = {1478--1483},
 }
 
@@ -308,7 +308,7 @@
 	year = {2014},
 	pmid = {24736596},
 	note = {Publisher: Public Library of Science},
-	keywords = {Anxiety, Cultural evolution, Culture, Evolutionary biology, Internet, Learning, Natural selection, Social psychology},
+	keywords = {Culture, Anxiety, Cultural evolution, Learning, Evolutionary biology, Internet, Natural selection, Social psychology},
 	pages = {e95167},
 	file = {PDF:/home/akc47/Zotero/storage/TQXJMPU8/full-text.pdf:application/pdf},
 }
@@ -325,7 +325,7 @@
 	month = mar,
 	year = {2019},
 	note = {Publisher: Academic Press},
-	keywords = {Cultural learning, Imitation, Over-imitation, Social learning, Social norms},
+	keywords = {Imitation, Social learning, Cultural learning, Over-imitation, Social norms},
 	pages = {90--108},
 	file = {PDF:/home/akc47/Zotero/storage/X7P2J2AY/full-text.pdf:application/pdf},
 }
@@ -345,7 +345,7 @@
 	year = {2012},
 	pmid = {23144865},
 	note = {Publisher: Public Library of Science},
-	keywords = {Archaeology, Cultural evolution, Culture, Hominins, Human evolution, Normal distribution, Paleoanthropology, Psychophysics},
+	keywords = {Archaeology, Culture, Hominins, Paleoanthropology, Cultural evolution, Human evolution, Normal distribution, Psychophysics},
 	pages = {e48333},
 	file = {PDF:/home/akc47/Zotero/storage/BLZG8ANZ/full-text.pdf:application/pdf},
 }
@@ -361,7 +361,7 @@
 	journal = {Trends in Cognitive Sciences},
 	author = {Legare, Cristine H and Nielsen, Mark},
 	year = {2015},
-	keywords = {cultural learning, cumulative culture, imitation, innovation, overimitation, ritual},
+	keywords = {ritual, cultural learning, cumulative culture, imitation, innovation, overimitation},
 	pages = {688--699},
 }
 
@@ -442,7 +442,7 @@
 	month = nov,
 	year = {2010},
 	note = {Publisher: John Wiley \& Sons, Ltd},
-	keywords = {emulation, end-state condition, experimental technique, ghost condition, imitation, observational learning, social learning},
+	keywords = {social learning, imitation, emulation, end-state condition, experimental technique, ghost condition, observational learning},
 	pages = {685--701},
 }
 
@@ -503,7 +503,7 @@ Underlying the various behaviors that are classified as imitation, there may be 
 	editor = {Kaas, Jon H},
 	year = {2017},
 	doi = {https://doi.org/10.1016/B978-0-12-804042-3.00095-6},
-	keywords = {Cultural evolution, Culture, Cumulative culture, Gene–culture coevolution, Innovation, Ratcheting, Social learning, Social learning strategies, Tradition, Transmission biases},
+	keywords = {Culture, Cultural evolution, Social learning, Innovation, Cumulative culture, Gene–culture coevolution, Ratcheting, Social learning strategies, Tradition, Transmission biases},
 	pages = {475--508},
 }
 
@@ -517,7 +517,7 @@ Underlying the various behaviors that are classified as imitation, there may be 
 	journal = {Journal of Experimental Child Psychology},
 	author = {Voigt, Babett and Pauen, Sabina and Bechtel-Kuehne, Sabrina},
 	year = {2019},
-	keywords = {Cognitive development, Creativity, Preschool children, Problem solving, Time, Tool innovation},
+	keywords = {Time, Cognitive development, Creativity, Preschool children, Problem solving, Tool innovation},
 	pages = {65--81},
 }
 
@@ -532,7 +532,7 @@ Underlying the various behaviors that are classified as imitation, there may be 
 	journal = {Trends in Cognitive Sciences},
 	author = {Rawlings, Bruce and Legare, Cristine H},
 	year = {2021},
-	keywords = {causal reasoning, cognition, cumulative culture, executive functioning, problem solving, social learning},
+	keywords = {social learning, cumulative culture, causal reasoning, cognition, executive functioning, problem solving},
 	pages = {81--92},
 }
 
@@ -562,7 +562,7 @@ Underlying the various behaviors that are classified as imitation, there may be 
 	journal = {Journal of Experimental Child Psychology},
 	author = {Cutting, Nicola and Apperly, Ian A and Chappell, Jackie and Beck, Sarah R},
 	year = {2014},
-	keywords = {Cognitive Development, Ill-structured problems, Innovation, Problem Solving, Social learning, Tools},
+	keywords = {Social learning, Innovation, Cognitive Development, Ill-structured problems, Problem Solving, Tools},
 	pages = {110--117},
 }
 
@@ -579,7 +579,7 @@ Underlying the various behaviors that are classified as imitation, there may be 
 	month = jan,
 	year = {2013},
 	note = {Publisher: John Wiley \& Sons, Ltd},
-	keywords = {culture, imitation, innovation, social learning, tool use},
+	keywords = {social learning, imitation, innovation, culture, tool use},
 	pages = {44--52},
 }
 
@@ -709,7 +709,7 @@ Place: Brünn},
 	year = {2012},
 	pmid = {22383851},
 	note = {Publisher: Science},
-	keywords = {Altruism, Animals, Cebus, Child, Cognition, Communication, Comparative Study, Cultural Evolution*, doi:10.1126/science.1213969, Extramural, Female, Humans, Imitative Behavior, Interpersonal Relations, K N Laland, L G Dean, Learning, MEDLINE, Mental Processes*, N.I.H., National Center for Biotechnology Information, National Institutes of Health, National Library of Medicine, NCBI, NIH, NLM, Non-U.S. Gov't, Pan troglodytes, PMC4676561, pmid:22383851, Preschool, Problem Solving*, PubMed Abstract, R L Kendal, Research Support, Reward, Social Behavior*, Teaching},
+	keywords = {Female, Humans, MEDLINE, National Center for Biotechnology Information, National Institutes of Health, National Library of Medicine, NCBI, NIH, NLM, Non-U.S. Gov't, PubMed Abstract, Research Support, Cognition, Animals, Comparative Study, Extramural, N.I.H., Cultural Evolution*, Learning, Social Behavior*, Altruism, Cebus, Child, Communication, doi:10.1126/science.1213969, Imitative Behavior, Interpersonal Relations, K N Laland, L G Dean, Mental Processes*, Pan troglodytes, PMC4676561, pmid:22383851, Preschool, Problem Solving*, R L Kendal, Reward, Teaching},
 	pages = {1114--1118},
 	file = {PDF:/home/akc47/Zotero/storage/IENL3X72/full-text.pdf:application/pdf},
 }
@@ -817,7 +817,7 @@ Social media summary: Storyteller and tale are both key to memorability, but som
 	author = {Berl, Richard E W and Samarasinghe, Alarna N and Roberts, Seán G and Jordan, Fiona M and Gavin, Michael C},
 	year = {2021},
 	note = {Publisher: Cambridge University Press},
-	keywords = {cognition, cultural transmission, prestige, sociolinguistics, storytelling, transmission biases},
+	keywords = {cultural transmission, cognition, prestige, sociolinguistics, storytelling, transmission biases},
 	pages = {e42},
 }
 
@@ -832,7 +832,7 @@ Social media summary: Storyteller and tale are both key to memorability, but som
 	journal = {Journal of Anthropological Archaeology},
 	author = {Eerkens, Jelmer W and Lipo, Carl P},
 	year = {2005},
-	keywords = {Copying errors, Cultural transmission, Evolutionary archaeology, Owens Valley, Projectile points, Woodland ceramics},
+	keywords = {Cultural transmission, Copying errors, Evolutionary archaeology, Owens Valley, Projectile points, Woodland ceramics},
 	pages = {316--334},
 }
 
@@ -902,7 +902,7 @@ Social media summary: Storyteller and tale are both key to memorability, but som
 	author = {Tomasello, Michael and Kruger, Ann Cale and Ratner, Hilary Horn},
 	year = {1993},
 	note = {Publisher: Cambridge University Press},
-	keywords = {animal cognition, attention, cognitive development, collaboration, cultural learning, culture, imitation, instruction, intentionality, intersubjectivity, social learning, theory of mind},
+	keywords = {theory of mind, social learning, cultural learning, imitation, culture, animal cognition, attention, cognitive development, collaboration, instruction, intentionality, intersubjectivity},
 	pages = {495--511},
 }
 
@@ -950,7 +950,7 @@ Social media summary: Storyteller and tale are both key to memorability, but som
 	journal = {Journal of Anthropological Archaeology},
 	author = {Carrignon, Simon and Alexander Bentley, R and O'Brien, Michael J},
 	year = {2023},
-	keywords = {Bayesian estimation, Cultural transmission, Information transparency, LBK, Neutral model, Popularity bias, Social learning, Utility},
+	keywords = {Cultural transmission, Social learning, LBK, Bayesian estimation, Information transparency, Neutral model, Popularity bias, Utility},
 	pages = {101545},
 }
 
@@ -1026,8 +1026,22 @@ Social media summary: Storyteller and tale are both key to memorability, but som
 	author = {Finkel, Meir and Barkai, Ran},
 	year = {2018},
 	note = {Publisher: Cambridge University Press},
-	keywords = {Acheulean, conservatism, handaxe, innovation, learning, Palaeolithic, stagnation},
+	keywords = {innovation, Acheulean, conservatism, handaxe, learning, Palaeolithic, stagnation},
 	pages = {1--19},
+}
+
+@article{porcic_chinese_2024,
+	title = {Chinese whispers in clay: {Copying} error and cultural attraction in the experimental transmission chain of anthropomorphic figurines},
+	volume = {162},
+	issn = {0305-4403},
+	url = {https://www.sciencedirect.com/science/article/pii/S0305440323001942},
+	doi = {https://doi.org/10.1016/j.jas.2023.105914},
+	abstract = {Understanding the nature of copying errors in the cultural transmission of material culture is highly relevant for students of cultural evolution, especially in the field of evolutionary archaeology. In this paper, we set up a classic transmission chain experiment, which involves making clay anthropomorphic figurines, to explore the nature of the copying error related to the production of 3D objects. The experiment consists of four independent transmission chains, each with 10 participants. Three chains are non-expert chains, as they consist of students of archaeology and psychology with no formal training in arts. The fourth is an expert chain consisting of art students. Our results show that the copying error predictably differs between the experts and the non-experts – it is lower in the expert chain. However, in both groups, the error is higher than predicted by the models that assume that the copying error is only due to imperfections in the perception of linear dimensions. Taken together, these two results suggest that, in addition to the error in perception, the error in the execution contributes significantly to the overall error, as predicted by the recently formulated object-mediated transmission model (Crema et al., 2023). The results of our experiment also show that the errors are often biased rather than random, suggesting that the transmission process involves the transformations anticipated by the cultural attraction theory.},
+	journal = {Journal of Archaeological Science},
+	author = {Porčić, Marko and Radinović, Mihailo and Branković, Marija and Jovanić, Aleksandra},
+	year = {2024},
+	keywords = {Copying error, Cultural attraction, Cultural transmission, Experiment, Figurine, Transmission chain},
+	pages = {105914},
 }
 
 @incollection{horner_controlled_2009,
@@ -1042,7 +1056,7 @@ Social media summary: Storyteller and tale are both key to memorability, but som
 	editor = {Chiao, Joan Y},
 	year = {2009},
 	doi = {https://doi.org/10.1016/S0079-6123(09)17801-9},
-	keywords = {chimpanzee, culture, evolution, human, learning},
+	keywords = {culture, learning, chimpanzee, evolution, human},
 	pages = {3--15},
 }
 
@@ -1103,7 +1117,7 @@ Social media summary: Storyteller and tale are both key to memorability, but som
 	journal = {Journal of Archaeological Science},
 	author = {Brantingham, P Jeffrey and Perreault, Charles},
 	year = {2010},
-	keywords = {Ceramic technology, Cultural evolution, Cultural transmission, Evolutionary archaeology, Indirect selection, Mutation–drift equilibrium, Neutral evolution, Price Equation},
+	keywords = {Cultural transmission, Cultural evolution, Evolutionary archaeology, Ceramic technology, Indirect selection, Mutation–drift equilibrium, Neutral evolution, Price Equation},
 	pages = {3211--3225},
 }
 
@@ -1118,7 +1132,7 @@ Social media summary: Storyteller and tale are both key to memorability, but som
 	journal = {Journal of Archaeological Science},
 	author = {Steele, James and Glatz, Claudia and Kandler, Anne},
 	year = {2010},
-	keywords = {Archaeological ceramics, Cultural transmission, Drift, Neutral model, Selection},
+	keywords = {Cultural transmission, Selection, Neutral model, Archaeological ceramics, Drift},
 	pages = {1348--1358},
 }
 
@@ -1162,7 +1176,7 @@ Social media summary: Storyteller and tale are both key to memorability, but som
 	journal = {Journal of Theoretical Biology},
 	author = {Kandler, Anne and Shennan, Stephen},
 	year = {2013},
-	keywords = {Conformity, Linear pottery culture, Markov chains, Neutral model, Wright–Fisher model},
+	keywords = {Neutral model, Conformity, Linear pottery culture, Markov chains, Wright–Fisher model},
 	pages = {18--25},
 }
 
@@ -1284,7 +1298,7 @@ Social media summary: Storyteller and tale are both key to memorability, but som
 	journal = {Evolution and Human Behavior},
 	author = {Acerbi, Alberto and Bentley, Alexander R},
 	year = {2014},
-	keywords = {Baby names, Color terms, Cultural evolution, Musical preferences, Neutral model, Transmission biases, Turnover},
+	keywords = {Cultural evolution, Transmission biases, Neutral model, Baby names, Color terms, Musical preferences, Turnover},
 	pages = {228--236},
 }
 
@@ -1299,7 +1313,7 @@ Social media summary: Storyteller and tale are both key to memorability, but som
 	journal = {Journal of Anthropological Archaeology},
 	author = {Kohler, Timothy A and VanBuskirk, Stephanie and Ruscavage-Barz, Samantha},
 	year = {2004},
-	keywords = {Aggregation, Archaeology, Ceramics, Conformity, Cooperation, Cultural transmission, Style, US southwest},
+	keywords = {Archaeology, Cultural transmission, Conformity, Aggregation, Ceramics, Cooperation, Style, US southwest},
 	pages = {100--118},
 }
 
@@ -1342,7 +1356,7 @@ Social media summary: Storyteller and tale are both key to memorability, but som
 	journal = {Evolution and Human Behavior},
 	author = {Efferson, Charles and Lalive, Rafael and Richerson, Peter J and McElreath, Richard and Lubell, Mark},
 	year = {2008},
-	keywords = {Conformity, Cultural transmission, Social learning},
+	keywords = {Cultural transmission, Social learning, Conformity},
 	pages = {56--64},
 }
 
@@ -1373,7 +1387,7 @@ Social media summary: Storyteller and tale are both key to memorability, but som
 	month = jan,
 	year = {2003},
 	note = {Publisher: John Wiley \& Sons, Ltd},
-	keywords = {coevolution, culture and cognition, dual inheritance theory, human evolution, social learning},
+	keywords = {coevolution, social learning, culture and cognition, dual inheritance theory, human evolution},
 	pages = {123--135},
 }
 
@@ -1418,7 +1432,7 @@ Social media summary: Storyteller and tale are both key to memorability, but som
 	journal = {Evolution and Human Behavior},
 	author = {Mesoudi, Alex and Lycett, Stephen J},
 	year = {2009},
-	keywords = {Conformity, Cultural evolution, Cultural transmission, Frequency-dependent copying, Neutral drift, Power law, Random copying},
+	keywords = {Cultural transmission, Cultural evolution, Conformity, Frequency-dependent copying, Neutral drift, Power law, Random copying},
 	pages = {41--48},
 }
 
@@ -1433,22 +1447,8 @@ Social media summary: Storyteller and tale are both key to memorability, but som
 	journal = {Evolution and Human Behavior},
 	author = {Henrich, Joe and Boyd, Robert},
 	year = {1998},
-	keywords = {Conformism, Conformist transmission, Cultural boundaries, Culture, Dual inheritance, Evolution},
+	keywords = {Culture, Evolution, Conformism, Conformist transmission, Cultural boundaries, Dual inheritance},
 	pages = {215--241},
-}
-
-@article{ewens_sampling_1972,
-	title = {The sampling theory of selectively neutral alleles},
-	volume = {3},
-	issn = {0040-5809},
-	url = {https://www.sciencedirect.com/science/article/pii/0040580972900354},
-	doi = {https://doi.org/10.1016/0040-5809(72)90035-4},
-	abstract = {In this paper a beginning is made on the sampling theory of neutral alleles. That is, we consider deductive and subsequently inductive questions relating to a sample of genes from a selectively neutral locus. The inductions concern estimation, confidence intervals and hypothesis testing. In particular the test of the hypothesis that the alleles being sampled are indeed selectively neutral will be considered. In view of the large amount of data currently being obtained by electrophoretic methods on allele frequencies and numbers, and the current interest in the possibility of extensive “non-Darwinian” evolution, such a sampling theory seems necessary. However, a large number of unsolved problems in this area remain, a partial listing being given towards the end of this paper.},
-	number = {1},
-	journal = {Theoretical Population Biology},
-	author = {Ewens, W J},
-	year = {1972},
-	pages = {87--112},
 }
 
 @article{jordan_cultural_2003,
@@ -1462,7 +1462,7 @@ Social media summary: Storyteller and tale are both key to memorability, but som
 	journal = {Journal of Anthropological Archaeology},
 	author = {Jordan, Peter and Shennan, Stephen},
 	year = {2003},
-	keywords = {Basketry, California Indians, Cultural evolution, Ethnogenesis, Languages, Phylogenesis, Transmission},
+	keywords = {Cultural evolution, Basketry, California Indians, Ethnogenesis, Languages, Phylogenesis, Transmission},
 	pages = {42--74},
 }
 
@@ -1502,7 +1502,7 @@ Social media summary: Storyteller and tale are both key to memorability, but som
 	journal = {Behavioural Processes},
 	author = {Barrett, Brendan J},
 	year = {2019},
-	keywords = {Cultural evolution, Equifinality, Social learning},
+	keywords = {Cultural evolution, Social learning, Equifinality},
 	pages = {129--138},
 }
 
@@ -1547,7 +1547,7 @@ Place: Leiden, The Netherlands},
 	journal = {Evolution and Human Behavior},
 	author = {Henrich, Joseph and Gil-White, Francisco J},
 	year = {2001},
-	keywords = {Cultural transmission, Dual inheritance theory, Prestige, Prestige-biased transmission, Social learning, Status},
+	keywords = {Cultural transmission, Social learning, Dual inheritance theory, Prestige, Prestige-biased transmission, Status},
 	pages = {165--196},
 }
 
@@ -1633,7 +1633,7 @@ Place: Leiden, The Netherlands},
 	journal = {Journal of Theoretical Biology},
 	author = {Sindi, Suzanne S and Dale, Rick},
 	year = {2016},
-	keywords = {Causal state, Drift, Evolution, Language, Selection, Word frequencies},
+	keywords = {Evolution, Selection, Drift, Causal state, Language, Word frequencies},
 	pages = {140--149},
 }
 
@@ -1650,4 +1650,77 @@ Place: Leiden, The Netherlands},
 	year = {2007},
 	note = {Publisher: Cambridge University Press},
 	pages = {395--416},
+}
+
+@article{garcia_rivero_prehistoria_2004,
+	title = {Prehistoria y evolución: reflexiones sobre la secuencia ecológico-cultural holocénica en el {Mediodía} ibérico},
+	issn = {2255-3924, 1133-4525},
+	shorttitle = {Prehistoria y evolución},
+	url = {https://dialnet.unirioja.es/servlet/articulo?codigo=2205947},
+	abstract = {Este trabajo expone aproximaciones teóricas evolucionistas para el análisis de espacios geográficos y sus culturas. Muestra diversos problemas metodológicos que existen en el estudio de determinados territorios, y propone, para futuras investigaciones, algunos nuevos enfoques, muchas veces mediante parámetros de estudio procedentes de distintas áreas de conocimiento. Los datos utilizados para estas aproximaciones son básicamente de carácter arqueológico, si bien obedecen a distinta naturaleza: estudios de fauna, de polen, de clima, de geomorfología, etc},
+	language = {spa},
+	number = {13},
+	urldate = {2025-08-26},
+	journal = {SPAL: Revista de prehistoria y arqueología de la Universidad de Sevilla},
+	author = {García Rivero, Daniel},
+	year = {2004},
+	note = {Publisher: Universidad de Sevilla
+Section: SPAL: Revista de prehistoria y arqueología de la Universidad de Sevilla},
+	pages = {9--34},
+	file = {Full Text PDF:/home/akc47/Zotero/storage/KIDW6XMB/García Rivero - 2004 - Prehistoria y evolución reflexiones sobre la secuencia ecológico-cultural holocénica en el Mediodía.pdf:application/pdf},
+}
+
+@article{lapolice_modeling_2025,
+	title = {Modeling the {European} {Neolithic} expansion suggests predominant within-group mating and limited cultural transmission},
+	volume = {16},
+	copyright = {2025 The Author(s)},
+	issn = {2041-1723},
+	url = {https://www.nature.com/articles/s41467-025-63172-0},
+	doi = {10.1038/s41467-025-63172-0},
+	abstract = {The Neolithic Revolution initiated a pivotal change in human society, marking the shift from foraging to farming. Historically, the underlying mechanisms of agricultural expansion have been a topic of debate, centered around two primary models: cultural diffusion, involving the transfer of knowledge and practices, and demic diffusion, characterized by the migration and replacement of populations. More recently, ancient DNA analyses have revealed significant ancestry changes during Europe’s Neolithic transition, suggesting a primarily demic expansion. Nonetheless, the presence of 10-15\% hunter-gatherer ancestry in modern Europeans indicates cultural transmission and between-group mating were additional contributing factors. Here, we integrate mathematical models, agent-based simulations, and ancient DNA analysis to dissect and quantify the roles of cultural diffusion and between-group mating in farming’s expansion. Our findings indicate limited cultural transmission and predominantly within-group mating. Additionally, we challenge the assumption that demic expansion always leads to ancestry turnover. These results offer insights into early agricultural society through the integration of ancient DNA with archaeological models.},
+	language = {en},
+	number = {1},
+	urldate = {2025-08-26},
+	journal = {Nature Communications},
+	author = {LaPolice, Troy M. and Williams, Matthew P. and Huber, Christian D.},
+	month = aug,
+	year = {2025},
+	note = {Publisher: Nature Publishing Group},
+	keywords = {Archaeology, Computational models, Genetic variation},
+	pages = {7905},
+	file = {Full Text PDF:/home/akc47/Zotero/storage/Q7FVRBLQ/LaPolice et al. - 2025 - Modeling the European Neolithic expansion suggests predominant within-group mating and limited cultu.pdf:application/pdf},
+}
+
+@article{shennan_isolation-by-distance_2015,
+	title = {Isolation-by-distance, homophily, and “core” vs. “package” cultural evolution models in {Neolithic} {Europe}},
+	volume = {36},
+	issn = {1090-5138},
+	url = {https://www.sciencedirect.com/science/article/pii/S1090513814001251},
+	doi = {10.1016/j.evolhumbehav.2014.09.006},
+	abstract = {Recently there has been growing interest in characterising population structure in cultural data in the context of ongoing debates about the potential of cultural group selection as an evolutionary process. Here we use archaeological data for this purpose, which brings in a temporal as well as spatial dimension. We analyse two distinct material cultures (pottery and personal ornaments) from Neolithic Europe, in order to: a) determine whether archaeologically defined “cultures” exhibit marked discontinuities in space and time, supporting the existence of a population structure, or merely isolation-by-distance; and b) investigate the extent to which cultures can be conceived as structuring “cores” or as multiple and historically independent “packages”. Our results support the existence of a robust population structure comparable to previous studies on human culture, and show how the two material cultures exhibit profound differences in their spatial and temporal structuring, signalling different evolutionary trajectories.},
+	number = {2},
+	urldate = {2025-08-26},
+	journal = {Evolution and Human Behavior},
+	author = {Shennan, Stephen J. and Crema, Enrico R. and Kerig, Tim},
+	month = mar,
+	year = {2015},
+	keywords = {Archaeology, Cultural evolution, Homophily, Isolation-by-distance, Material culture, Neolithic Europe, Population structure},
+	pages = {103--109},
+	file = {ScienceDirect Full Text PDF:/home/akc47/Zotero/storage/XSVURZ24/Shennan et al. - 2015 - Isolation-by-distance, homophily, and “core” vs. “package” cultural evolution models in Neolithic Eu.pdf:application/pdf;ScienceDirect Snapshot:/home/akc47/Zotero/storage/ACG2MBEP/S1090513814001251.html:text/html},
+}
+
+@article{fort_front_2021,
+	title = {Front propagation and cultural transmission. {Theory} and application to {Neolithic} transitions},
+	volume = {148},
+	issn = {0960-0779},
+	url = {https://www.sciencedirect.com/science/article/pii/S0960077921004148},
+	doi = {10.1016/j.chaos.2021.111060},
+	abstract = {We study the front propagation of a population that incorporates individuals of a second, pre-existing population. Previous models of such incorporation deal only with vertical cultural transmission (interbreeding) and horizontal cultural transmission (acculturation of individuals of the second population by members of the first one and of similar age). Here we present the first model of oblique transmission (acculturation by individuals of an older generation), which is more complicated because a model with age structure is necessary. We compare the new, age-structured model for oblique, horizontal and vertical transmission. The most powerful mechanism (fastest fronts) is oblique transmission. Two illustrative applications of Neolithic front propagation are presented. In one of them, the front was so fast that neither horizontal nor vertical transmission can explain it (but oblique transmission can). In the cases for which cultural transmission is a viable explanation, the observed front speed yields bounds on the intensity of cultural transmission. Our models are also of interest in many other Neolithic and non-Neolithic human range expansions, including major human migrations. Additionally, in future work the new age-structured models reported in this paper could be applied to model genetic gradients and, possibly, to similar phenomena in other species in which cultural transmission is well-known to occur.},
+	urldate = {2025-08-26},
+	journal = {Chaos, Solitons \& Fractals},
+	author = {Fort, Joaquim},
+	month = jul,
+	year = {2021},
+	keywords = {Age-structured models, Cultural diffusion, Front propagation, Neolithic, Nonlinear population dynamics, Reaction-diffusion},
+	pages = {111060},
 }
